compiler/testData/diagnostics/tests/overload/ConflictingOverloadsIdenticalFunsInClass.kt
// FIR_IDENTICAL
class A() {
    <!CONFLICTING_OVERLOADS!>fun b()<!> {
    }

    <!CONFLICTING_OVERLOADS!>fun b()<!> {
    }
}
